Bug 460056 - Application launchers overlap when dragged to an otherwise empty non-maximized Panel on a vertical screen edge
Summary: Application launchers overlap when dragged to an otherwise empty non-maximize...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Icon widget (other bugs)
Version First Reported In: 5.25.5
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-06 16:19 UTC by csmith
Modified: 2025-05-28 02:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Imaged of widgets stacked over eachother after dragging to panel. (11.26 KB, image/png)
2022-10-06 16:19 UTC, csmith
Details

Note You need to log in before you can comment on or make changes to this bug.
Description csmith 2022-10-06 16:19:04 UTC
Created attachment 152620 [details]
Imaged of widgets stacked over eachother after dragging to panel.

SUMMARY
Adding application icons to a new empty panel does not work. When adding an icon or app widget, they are stacked on top of each other. they are arranged correctly only after logging out and back in to Plasma 5.

First time submitting a bug, I hope I followed correct protocols etc :)

NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Create an empty panel. 
2. Add more than one app icon / widget to it.


OBSERVED RESULT
Icons to not appear below each other, they are created on top of each other.

EXPECTED RESULT
app icons / widgets appear beneath each other when added.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora 36
(available in About System)
KDE Plasma Version: Plasma 5.25.5
KDE Frameworks Version: 5.98.0
Qt Version:  5.15.6

ADDITIONAL INFORMATION
This has been tested on:
Older thinkpad T430
VMWare workstation 16
Ryzen 7950X / GEFORCE 3080
 ^^ all running Fedora 36, same Plasma version as above.
See also: 
https://forum.kde.org/viewtopic.php?f=289&t=176030&sid=875be83bf2f3b596b14b65468b5e6c78
Comment 1 csmith 2022-10-07 17:47:19 UTC
I also tested this with and empty Application Menu Bar, same issue.
Comment 2 Nate Graham 2022-10-10 16:58:46 UTC
> First time submitting a bug, I hope I followed correct protocols etc :)

You did it right. :) 

However I Ciannot reproduce the issue when I try. Can you clarify where you're dragging apps from?

Also, what thickness is the panel?

Finally, does it happen with the Breeze Plasma theme?
Comment 3 csmith 2022-10-10 19:30:14 UTC
Panel is default thickness, though it does the same then when I shrink it some. I am trying to drag icons from the main panel / menu on the bottom. Here are two videos of the behaviour via my nextcloud. Note this time it took a couple tries, at first it happened right after I added the second icon.

First is using breeze dark with oxygen plasma style.
https://nc.hwyofcool.com/index.php/s/6T8GDm4wzjkFtSq

Next is using just the breeze global theme.
https://nc.hwyofcool.com/index.php/s/NzakCXpNYSDSE5j

Hope this helps...
Comment 4 Nate Graham 2022-10-11 16:19:18 UTC
Thanks, that's helpful. Can reproduce fairly reliably with a non-maximized Panel.
Comment 5 Nate Graham 2023-09-18 18:27:26 UTC
Cannot reproduce anymore. This must have gotten fixed by Plasma 5.27 or earlier.
Comment 6 csmith 2023-09-19 14:39:11 UTC
Unfortunately the problem persists for me:

https://nc.hwyofcool.com/index.php/s/r2osL7Xx5sBCT6i

This is on a Dell Lattitude 7490 Intel Core i5-8350U.

I will test this on a newer laptop later this evening.
Comment 7 Nate Graham 2023-09-19 15:44:02 UTC
Ok. So that short vertical panel, what's on it? Are those icons provided by standalone icon widgets, or are they part of a Task Manager widget?
Comment 8 csmith 2023-09-19 16:22:19 UTC
(In reply to Nate Graham from comment #7)
> Ok. So that short vertical panel, what's on it? Are those icons provided by
> standalone icon widgets, or are they part of a Task Manager widget?

This is simply a custom empty panel that I have resized and added (dragged from my start menu) my own icons to. 
Sequence:
1. Right click on desktop > Add panel > Empty panel.
2. Right click on empty panel to go into edit mode.
3. Drag panel to side of screen.
4. Resize panel / center it on side of screen.
5. Start dragging icons / apps to it from start menu.
 - sometimes an added icon will correctly appear below other added ones. but more often than not, the icon will appear above others as seen in the video.

Hope this helps...
Comment 9 Nate Graham 2023-09-20 17:05:12 UTC
Thanks. I can reproduce the issue again with those exact steps.
Comment 10 csmith 2023-10-04 14:30:30 UTC
(In reply to csmith from comment #6)
> Unfortunately the problem persists for me:
> 
> https://nc.hwyofcool.com/index.php/s/r2osL7Xx5sBCT6i
> 
> This is on a Dell Lattitude 7490 Intel Core i5-8350U.
> 
> I will test this on a newer laptop later this evening.

Updated link to video:

https://nc.hwyofcool.com/index.php/s/zWn6nQy6HaJCSHN
Comment 11 csmith 2024-03-03 04:26:38 UTC
Update: This still seems to be broken on KDE6.
csmith@hwylxcool ~
$ plasmashell --version
plasmashell 6.0.0

Linux/KDE Plasma:  Nobara 39
(available in About System)
KDE Plasma Version: Plasma 6
KDE Frameworks Version: 6
Qt Version:  6.6.2

Ryzen 7950X / GEFORCE 3080
Comment 12 Nate Graham 2024-08-28 19:09:40 UTC
Cannot reproduce the issue anymore in current git master the way I was able to before, so it looks like it'll fixed in Plasma 6.2!
Comment 13 csmith 2024-10-10 14:35:23 UTC
This is still an issue in kde 6.2 :( See new panel on right side of this video. If this needs a new ticket, let me know and I'll close this one and open new one.

https://nc.hwyofcool.com/index.php/s/MZXAG4nGfQfyqKM

$ plasmashell --version
plasmashell 6.2.0


$ neofetch
             .',;::::;,'.                csmith@FeLappy 
         .';:cccccccccccc:;,.            -------------- 
      .;cccccccccccccccccccccc;.         OS: Fedora Linux 40 (KDE Plasma) x86_64 
    .:cccccccccccccccccccccccccc:.       Host: Latitude 7490 
  .;ccccccccccccc;.:dddl:.;ccccccc;.     Kernel: 6.10.12-200.fc40.x86_64 
 .:ccccccccccccc;OWMKOOXMWd;ccccccc:.    Uptime: 12 mins 
.:ccccccccccccc;KMMc;cc;xMMc:ccccccc:.   Packages: 1 (dpkg), 2300 (rpm), 6 (flatpak) 
,cccccccccccccc;MMM.;cc;;WW::cccccccc,   Shell: bash 5.2.26 
:cccccccccccccc;MMM.;cccccccccccccccc:   Resolution: 1920x1080 
:ccccccc;oxOOOo;MMM0OOk.;cccccccccccc:   DE: Plasma 6.2.0 
cccccc:0MMKxdd:;MMMkddc.;cccccccccccc;   WM: kwin 
ccccc:XM0';cccc;MMM.;cccccccccccccccc'   Theme: Breeze-Dark [GTK2], Breeze [GTK3] 
ccccc;MMo;ccccc;MMW.;ccccccccccccccc;    Icons: breeze-dark [GTK2/3] 
ccccc;0MNc.ccc.xMMd:ccccccccccccccc;     Terminal: konsole 
cccccc;dNMWXXXWM0::cccccccccccccc:,      CPU: Intel i5-8350U (8) @ 3.600GHz 
cccccccc;.:odl:.;cccccccccccccc:,.       GPU: Intel UHD Graphics 620 
:cccccccccccccccccccccccccccc:'.         Memory: 2896MiB / 31966MiB
Comment 14 Nate Graham 2024-10-23 17:25:31 UTC
Yeah, I too can reproduce it again. :/
Comment 15 Marco Martin 2025-05-22 14:08:48 UTC
i can reproduce on master
Comment 16 Marco Martin 2025-05-22 15:00:03 UTC
a potentially meaningful debug message on the terminal that happens is 


file:///home/diau/kf6/usr/share/plasma/plasmoids/org.kde.panel/contents/ui/main.qml:380:9: QML ListModel: insert: index 4 out of range
Comment 17 Bug Janitor Service 2025-05-23 15:45:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1315
Comment 18 Marco Martin 2025-05-26 10:04:33 UTC
Git commit f8ebffebdf5ea11e456120d2afe12f2c0f0443e3 by Marco Martin.
Committed on 26/05/2025 at 10:00.
Pushed by mart into branch 'master'.

Fix drag and drop of item on containments

ContainmentItem::createApplet wants a position relative to the containment,
while sendng dropPoint() is an absolute screen coordinate position

Drop will be broken for centered panels and containments in screens not
at 0,0 position.
transform the coordinates to be relative to the contaiment

M  +15   -9    src/plasmaquick/plasmoid/containmentitem.cpp
M  +6    -6    src/plasmaquick/plasmoid/dropmenu.cpp
M  +3    -3    src/plasmaquick/plasmoid/dropmenu.h

https://invent.kde.org/plasma/libplasma/-/commit/f8ebffebdf5ea11e456120d2afe12f2c0f0443e3
Comment 19 Marco Martin 2025-05-26 10:04:40 UTC
Git commit a363cfcfa77883018c6d86f3c929284d4ba306f9 by Marco Martin.
Committed on 26/05/2025 at 09:24.
Pushed by mart into branch 'master'.

drag and drop: delete the menu if there are no actions to show

It's possible that there are no actions to show, when the mime
job doesn't fund anything, we fall back to the icon applet.
if there are no actions to show, the menu won't be shown at all, therefore
won't be deleted, breaking every subsequent drop.
Delete the menu immediately in this case
Related: bug 502479

M  +4    -0    src/plasmaquick/plasmoid/dropmenu.cpp

https://invent.kde.org/plasma/libplasma/-/commit/a363cfcfa77883018c6d86f3c929284d4ba306f9
Comment 20 Marco Martin 2025-05-26 10:15:16 UTC
Git commit 5c3b3b77388080cb51124c356ed6a4b893a08fc0 by Marco Martin.
Committed on 26/05/2025 at 10:15.
Pushed by mart into branch 'Plasma/6.4'.

Fix drag and drop of item on containments

ContainmentItem::createApplet wants a position relative to the containment,
while sendng dropPoint() is an absolute screen coordinate position

Drop will be broken for centered panels and containments in screens not
at 0,0 position.
transform the coordinates to be relative to the contaiment

M  +15   -9    src/plasmaquick/plasmoid/containmentitem.cpp
M  +6    -6    src/plasmaquick/plasmoid/dropmenu.cpp
M  +3    -3    src/plasmaquick/plasmoid/dropmenu.h

https://invent.kde.org/plasma/libplasma/-/commit/5c3b3b77388080cb51124c356ed6a4b893a08fc0
Comment 21 Marco Martin 2025-05-26 10:15:22 UTC
Git commit c7d583c98f5c0cedab8564d5d5b751b6184be81a by Marco Martin.
Committed on 26/05/2025 at 10:14.
Pushed by mart into branch 'Plasma/6.4'.

drag and drop: delete the menu if there are no actions to show

It's possible that there are no actions to show, when the mime
job doesn't fund anything, we fall back to the icon applet.
if there are no actions to show, the menu won't be shown at all, therefore
won't be deleted, breaking every subsequent drop.
Delete the menu immediately in this case
Related: bug 502479

M  +4    -0    src/plasmaquick/plasmoid/dropmenu.cpp

https://invent.kde.org/plasma/libplasma/-/commit/c7d583c98f5c0cedab8564d5d5b751b6184be81a