Fix drag and drop of item on containments

ContainmentItem::createApplet wants a position relative to the containment,
while sendng dropPoint() is an absolute screen coordinate position

Drop will be broken for centered panels and containments in screens not
at 0,0 position.
transform the coordinates to be relative to the contaiment

BUG:460056